--- a/app/src/main/res/layout/activity_course_details.xml
+++ b/app/src/main/res/layout/activity_course_details.xml
@@ -82,13 +82,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Status:" />
-            <EditText
-                android:id="@+id/status"
+            <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="Pending" />
+                android:layout_height="wrap_content">
+                <Spinner
+                    android:id="@+id/progresspinner"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content" />
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
         </LinearLayout>
             <!--            </androidx.appcompat.widget.LinearLayoutCompat>-->
+
+
 
             <TextView
                 android:id="@+id/textView3"
@@ -159,7 +166,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Edit Note" />
+                    android:text="Edit Note:" />
 
                 <EditText
                     android:id="@+id/editnote"
