--- a/app/src/main/res/layout-land/activity_assessment_details.xml
+++ b/app/src/main/res/layout-land/activity_assessment_details.xml
@@ -68,7 +68,7 @@
                     android:id="@+id/assessmentend"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:hint="01/31/2023"
+                    android:hint="1/31/2023"
                     android:inputType="none" />
             </LinearLayout>
 
@@ -76,6 +76,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
+                <!--            <androidx.appcompat.widget.LinearLayoutCompat-->
+                <!--                android:layout_width="wrap_content"-->
+                <!--                android:layout_height="wrap_content">-->
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -106,6 +109,34 @@
                     android:text="Save" />
             </androidx.appcompat.widget.LinearLayoutCompat>
 
+
+<!--            <androidx.appcompat.widget.LinearLayoutCompat-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content">-->
+
+<!--                <TextView-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="Edit Note:" />-->
+
+<!--                <EditText-->
+<!--                    android:id="@+id/editnote"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:hint="note" />-->
+<!--            </androidx.appcompat.widget.LinearLayoutCompat>-->
+
+<!--            <androidx.appcompat.widget.LinearLayoutCompat-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content">-->
+
+<!--                <Spinner-->
+<!--                    android:id="@+id/spinner"-->
+<!--                    android:layout_width="409dp"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    tools:layout_editor_absoluteX="1dp"-->
+<!--                    tools:layout_editor_absoluteY="373dp" />-->
+<!--            </androidx.appcompat.widget.LinearLayoutCompat>-->
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
