--- a/app/src/main/res/layout-land/activity_course_details.xml
+++ b/app/src/main/res/layout-land/activity_course_details.xml
@@ -77,7 +77,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
-
+                <!--            <androidx.appcompat.widget.LinearLayoutCompat-->
+                <!--                android:layout_width="wrap_content"-->
+                <!--                android:layout_height="wrap_content">-->
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -95,6 +97,8 @@
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
             </LinearLayout>
+            <!--            </androidx.appcompat.widget.LinearLayoutCompat>-->
+
 
             <TextView
                 android:id="@+id/textView3"
@@ -144,7 +148,7 @@
                     android:id="@+id/ciemail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:hint="John.Doe@wgu.edu" />
+                    android:hint="John.Doe@Wgu.com" />
             </LinearLayout>
 
             <androidx.appcompat.widget.LinearLayoutCompat
