--- a/app/src/main/res/layout-land/activity_term_details.xml
+++ b/app/src/main/res/layout-land/activity_term_details.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UI.AssessmentDetails">
+    tools:context=".UI.TermDetails">
 
     <ScrollView
-        android:id="@+id/scrollView3"
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="600dp"
+        android:layout_height="187dp"
         android:orientation="vertical"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -26,14 +26,13 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Title:" />
+                    android:text="Term Name:" />
 
                 <EditText
-                    android:id="@+id/assessmenttitle"
+                    android:id="@+id/termname"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:hint="C196" />
-
+                    android:hint="Name" />
             </LinearLayout>
 
             <LinearLayout
@@ -44,14 +43,13 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Start Date:" />
+                    android:text="Term Start:" />
 
                 <EditText
-                    android:id="@+id/assessmentstart"
+                    android:id="@+id/termstart"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:hint="1/1/2023"
-                    android:inputType="none" />
+                    android:hint="Start Date" />
             </LinearLayout>
 
             <LinearLayout
@@ -59,39 +57,17 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="End Date:" />
+                    android:text="Term End:" />
 
                 <EditText
-                    android:id="@+id/assessmentend"
+                    android:id="@+id/termend"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:hint="01/31/2023"
-                    android:inputType="none" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Type:" />
-
-                <androidx.appcompat.widget.LinearLayoutCompat
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-
-                    <Spinner
-                        android:id="@+id/typespinner"
-                        android:layout_width="200dp"
-                        android:layout_height="wrap_content" />
-
-                </androidx.appcompat.widget.LinearLayoutCompat>
-
+                    android:hint="End Date" />
             </LinearLayout>
 
             <androidx.appcompat.widget.LinearLayoutCompat
@@ -100,12 +76,29 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/saveassessment"
+                    android:id="@+id/saveterm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Save" />
             </androidx.appcompat.widget.LinearLayoutCompat>
 
         </LinearLayout>
+
     </ScrollView>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_baseline_add_24" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/courserecycleview"
+        android:layout_width="730dp"
+        android:layout_height="544dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/scrollView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
