--- a/app/src/main/res/layout/course_list_item.xml
+++ b/app/src/main/res/layout/course_list_item.xml
@@ -17,6 +17,7 @@
             android:layout_height="wrap_content"
             android:padding="20dp"
             android:text="TextView"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:layout_editor_absoluteX="173dp"
@@ -28,6 +29,7 @@
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:text="TextView"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:layout_editor_absoluteX="173dp"
@@ -39,6 +41,7 @@
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:text="TextView"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:layout_editor_absoluteX="173dp"
